# LLMoker

./: .gitignore  CLAUDE.md  README.md  blueprint.md  dialogue_system.md  llm_npc_setup.md  pyproject.toml  renpy_engine.md  requirements.txt
llmoker/: 5Drawminigame.py  5Drawminigame.sh  after_checkout.sh  errors.txt  log.txt  main.py  pyproject.toml  traceback.txt
llmoker/backend/: __init__.py  config.py  dialogue_lines.yaml  llm_agent.py  memory_manager.py  poker_engine.py  poker_hands.py  policy_loop.py  prompt_builder.py  replay_logger.py  save_state_store.py  script_bot.py  sqlite_compat.py
llmoker/backend/llm/: __init__.py  agent.py  bootstrap_console.py  client.py  model_bootstrap.py  prompts.py  results.py  runtime.py  runtime_worker.py  tasks.py  tools.py  worker_client.py
llmoker/data/personas/: script_bot.json
llmoker/data/prompts/: poker_action_system.txt
llmoker/data/replays/: match_replays.jsonl
llmoker/game/: gui.rpy  gui.rpyc  options.rpy  options.rpyc  poker_agents.rpy  poker_config.rpy  poker_core.rpy  poker_dialogue.rpy  poker_minigame.rpy  poker_minigame.rpyc  poker_ui.rpy  screens.rpy  screens.rpyc  script.rpy  script.rpyc
llmoker/game/audio/: game.flac  main.flac
llmoker/game/cache/: build_info.json  bytecode-39.rpyb  py3analysis.rpyb  screens.rpyb  shaders.txt
llmoker/game/gui/: logo.webm  logo_silent.webm  openingcinema.webm  openingcinema_playback.webm  (+1 more)
llmoker/scripts/: check_dialogue.py  check_game_non_gui.sh  check_qwen_agent.py  check_raw_inference.py  llm_runtime_worker.py  run_match.py  verify_llm_policy_simulation.py
(+117 files in other folders)
