[project]
name = "llmoker"
version = "0.1.0"
description = "Ren'Py 기반 5드로우 포커 + 로컬 LLM + memory 프로젝트"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
llm = [
    "accelerate>=0.33",
    "torch>=2.3",
    "transformers>=4.48",
]

[tool.uv]
package = false
