[project]
name = "llmoker"
version = "0.1.0"
description = "Ren'Py 기반 5드로우 포커 + 로컬 LLM + memory 프로젝트"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
llm = [
    "numpy>=1.26",
    "pydantic>=2.12",
    "pydantic-core>=2.41",
    "python-dateutil>=2.9",
    "qwen-agent>=0.0.34",
    "soundfile>=0.12",
    "torch>=2.3",
    "torchaudio>=2.3",
    "transformers>=5.3.0",
    "torchvision>=0.18",
]

[tool.uv]
package = false
